--- a/index.html
+++ b/index.html
@@ -97,11 +97,21 @@ En resumen, como programador, soy un individuo apasionado, enfocado en la calida
 
 <h3 class="miEquipo">Mi Equipo</h3>
 <br>
-<div class="imagenesMiEquipo">
-    <img class="imgequipo1" src="imagenes/people-g7270be953_1280.jpg" height="400px" width="500px"> 
-    <img class="imgequipo2" src="imagenes/programming-gc5ca95f2f_1280.png" height="400px" width="500px">
-    <img class="imgequipo3" src="imagenes/meeting-g553dceb58_1280.jpg" height="400px" width="500px"> 
-</div>
+<main class="main">
+    <div class="main">
+        <div class="imgMain1">
+        <img src="imagenes/people-g7270be953_1280.jpg" alt="" height="300px" width="300px">
+        </div>
+        
+        <div class="imgMain2">
+            <img src="imagenes/programming-gc5ca95f2f_1280.png" alt="" height="300px" width="300px">
+        </div>
+        
+        <div class="imgmain3">
+            <img src="imagenes/meeting-g553dceb58_1280.jpg" alt="" height="300px" width="400px">
+        </div>
+    </div>
+</main>
 <br>
 <div class="direcBoton"> <a href="contacto.html" class="boton">Contacto</a> </div>
 
