--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Soy un entusiasta de la resolución de problemas y disfruto enfrentando desafío
 En resumen, como programador, soy un individuo apasionado, enfocado en la calidad y el aprendizaje continuo. Mi experiencia técnica, habilidades de comunicación y pasión por la resolución de problemas me convierten en un profesional confiable y capaz de enfrentar cualquier desafío de desarrollo de software. Estoy emocionado por seguir creciendo y contribuyendo al mundo de la programación, siempre buscando nuevas formas de innovar y mejorar la vida de las personas a través del código. </p>
 
 <br>
-
+<p>hola</p>
 <h3 class="miEquipo">Mi Equipo</h3>
 <br>
 <main class="main">
