--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@ En resumen, como programador, soy un individuo apasionado, enfocado en la calida
 
 <br>
 <p>hola</p>
+<p>hola</p>
+<p>hola</p>
+<p>hola</p>
 <h3 class="miEquipo">Mi Equipo</h3>
 <br>
 <main class="main">
