--- a/contacto.html
+++ b/contacto.html
@@ -1,46 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <!-- imagenes -->
-    <link rel="stylesheet" href="imagenes/1366_2000.jpg">
-    <link rel="stylesheet" href="imagenes/code-g80beacf0b_1280.jpg">
-    <link rel="stylesheet" href="imagenes/green-g4ec7719fb_1280.jpg">
-    <link rel="stylesheet" href="imagenes/michael-heise-Nh_ln5owJjY-unsplash.jpg">
-    <link rel="stylesheet" href="imagenes/chrome_AKEya3SN6q.png">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contacto</title>
+<link rel="shortcut icon" href="img/norte (1).png" type="image/x-icon">
+<link rel="stylesheet" href="estilos/estilos.css">
+<!-- Libreria para footer -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="shortcut icon" href="img/norte (1).png" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/estilos.css">
-    <!-- Libreria para footer -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- Fuente -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
 
-    <!-- Fuente -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
+<!-- enlaces -->
+<link rel="shortcut icon" href="img/norte (1).png" type="image/x-icon">
+<link rel="stylesheet" href="./index.html">
+<link rel="stylesheet" href="./paginas/experience.html">
+<link rel="stylesheet" href="./paginas/portfolio.html">
+<link rel="stylesheet" href="./contacto.html">
 
-    <!-- enlaces -->
-    <link rel="shortcut icon" href="img/norte (1).png" type="image/x-icon">
-    <link rel="stylesheet" href="../index.html">
-    <link rel="stylesheet" href="../paginas/experience.html">
-    <link rel="stylesheet" href="../paginas/portfolio.html">
-    <link rel="stylesheet" href="../contacto.html">
-
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     
-    <!-- Seo -->
-    <meta name="title" content="Mi portfolio">
-    <meta name="description" content="habilidades y proyectos personales">
-    <meta name="keywords" content="Portfolio, Proyectos, Cv, Curriculum, Habilidades">
-    <!-- Css -->
-    <link rel="stylesheet" href="scss/estilos.scss"
-    <link rel="stylesheet" href="../estilos/estilos.css">
-    <link rel="stylesheet" href="estilos/estilos.css">
+<!-- Seo -->
+<meta name="title" content="Mi portfolio">
+<meta name="description" content="habilidades y proyectos personales">
+<meta name="keywords" content="Portfolio, Proyectos, Cv, Curriculum, Habilidades">
+<!-- Css -->
+<link rel="stylesheet" href="scss/estilos.scss"
+<link rel="stylesheet" href="../estilos/estilos.css">
+<link rel="stylesheet" href="estilos/estilos.css">
 </head>
 
 <body>
@@ -96,7 +89,7 @@
     <P class="descripcion">Formulario de contacto en nuestro sitio web:
         En nuestro sitio web, tenemos un formulario de contacto que puedes completar con tus consultas o comentarios. Solo visita la sección de "Contacto" en www.fashionland.com y rellena el formulario con la información requerida. Nos pondremos en contacto contigo a la mayor brevedad posible.
         Estos son los principales canales de contacto disponibles para la marca ficticia "FashionLand". Ten en cuenta que este es solo un ejemplo y que los detalles de contacto pueden variar según la marca y su enfoque específico. </P>
- </p>
+</p>
 <br>
 
 <h2 class="formulario">Formulario</h2>
