--- a/index.html
+++ b/index.html
@@ -1,92 +1,83 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <!-- imagenes -->
-    <link rel="stylesheet" href="imagenes/1366_2000.jpg">
-    <link rel="stylesheet" href="imagenes/code-g80beacf0b_1280.jpg">
-    <link rel="stylesheet" href="imagenes/green-g4ec7719fb_1280.jpg">
-    <link rel="stylesheet" href="imagenes/michael-heise-Nh_ln5owJjY-unsplash.jpg">
-    <link rel="stylesheet" href="imagenes/programming-gc5ca95f2f_1280.png">
-    <link rel="stylesheet" href="imagenes/people-g7270be953_1280.jpg">
-    <link rel="stylesheet" href="imagenes/meeting-g553dceb58_1280.jpg">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portfolio</title>
+<link rel="shortcut icon" href="img/norte (1).png" type="image/x-icon">
+<link rel="stylesheet" href="estilos/estilos.css">
+<!-- Libreria para footer -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="shortcut icon" href="img/norte (1).png" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/estilos.css">
-    <!-- Libreria para footer -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- Fuente -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
 
-    <!-- Fuente -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
+<!-- enlaces -->
+<link rel="shortcut icon" href="imagenes/netswire-favicon.webp" type="image/x-icon">
+<link rel="stylesheet" href="./index.html">
+<link rel="stylesheet" href="./paginas/experience.html">
+<link rel="stylesheet" href="./paginas/portfolio.html">
+<link rel="stylesheet" href="./contacto.html">
 
-    <!-- enlaces -->
-    <link rel="shortcut icon" href="imagenes/netswire-favicon.webp" type="image/x-icon">
-    <link rel="stylesheet" href="../index.html">
-    <link rel="stylesheet" href="../paginas/experience.html">
-    <link rel="stylesheet" href="../paginas/portfolio.html">
-    <link rel="stylesheet" href="../contacto.html">
+<!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    
-    <!-- Seo -->
-    <meta name="title" content="Mi portfolio">
-    <meta name="description" content="habilidades y proyectos personales">
-    <meta name="keywords" content="Portfolio, Proyectos, Cv, Curriculum, Habilidades">
+<!-- Seo -->
+<meta name="title" content="Mi portfolio">
+<meta name="description" content="habilidades y proyectos personales">
+<meta name="keywords" content="Portfolio, Proyectos, Cv, Curriculum, Habilidades">
 
-    <!-- Css -->
-    <link rel="stylesheet" href="scss/estilos.scss"
-    <link rel="stylesheet" href="../estilos/estilos.css">
-    <link rel="stylesheet" href="estilos/estilos.css">
+<!-- Css -->
+<link rel="stylesheet" href="scss/estilos.scss"
+<link rel="stylesheet" href="../estilos/estilos.css">
+<link rel="stylesheet" href="estilos/estilos.css">
 </head>
 
 <body>
-    <header class="header">
-        <img class="imgHeader"src="imagenes/michael-heise-Nh_ln5owJjY-unsplash.jpg" alt="imagenes/">
-        <nav class="navbar navbar-expand-lg bg-dark">
-            <div class="container-fluid">
-            <a class="navbar-brand" href="index.html" >Sr Nicolas </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html" id="home">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="paginas/portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                More
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="paginas/experience.html">Experience</a></li>
-                    <li><a class="dropdown-item" href="paginas/aboutme.html">About Me</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
-                    </ul>
-                </li>
-                </ul>
-                <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-            </div>
-        </nav>
-    </header>
+<header class="header">
+<img class="imgHeader"src="imagenes/michael-heise-Nh_ln5owJjY-unsplash.jpg" alt="imagenes/">
+<nav class="navbar navbar-expand-lg bg-dark">
+<div class="container-fluid">
+<a class="navbar-brand" href="index.html" >Sr Nicolas </a>
+<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<li class="nav-item">
+<a class="nav-link active" aria-current="page" href="index.html" id="home">Home</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="paginas/portfolio.html">Portfolio</a>
+</li>
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    More
+    </a>
+<ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="paginas/experience.html">Experience</a></li>
+    <li><a class="dropdown-item" href="paginas/aboutme.html">About Me</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
+    </ul>
+    </li>
+    </ul>
+<form class="d-flex" role="search">
+    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success" type="submit">Search</button>
+</form>
+</div>
+</div>
+</nav>
+</header>
 <h1 class="nico">Nicolas</h1>
 
 <p class="descripcion">
-    Como programador, me considero una persona apasionada y comprometida con mi trabajo. Desde temprana edad, descubrí mi fascinación por la tecnología y cómo el código puede dar vida a ideas y solucionar problemas de manera eficiente. Mi pasión por la programación me ha llevado a desarrollar habilidades sólidas en una variedad de lenguajes de programación, frameworks y tecnologías.
+Como programador, me considero una persona apasionada y comprometida con mi trabajo. Desde temprana edad, descubrí mi fascinación por la tecnología y cómo el código puede dar vida a ideas y solucionar problemas de manera eficiente. Mi pasión por la programación me ha llevado a desarrollar habilidades sólidas en una variedad de lenguajes de programación, frameworks y tecnologías.
 Soy un aprendiz constante y siempre estoy buscando oportunidades para expandir mis conocimientos. Me mantengo actualizado sobre las últimas tendencias y avances en el campo de la programación, asistiendo a conferencias, participando en cursos en línea y leyendo libros técnicos. Esta mentalidad de aprendizaje continuo me permite estar al tanto de las mejores prácticas y encontrar soluciones innovadoras para los problemas que enfrento.
 Además de ser un solucionador de problemas técnico, también valoro la comunicación efectiva y el trabajo en equipo. Entiendo la importancia de trabajar en estrecha colaboración con otros profesionales, como diseñadores, analistas de negocios y otros programadores, para comprender plenamente los requisitos del proyecto y entregar resultados exitosos.
 Mi habilidad para comunicarme de manera clara y concisa me ayuda a articular ideas y conceptos técnicos de una manera comprensible para todos los miembros del equipo.
